# echo-line-bot

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/rules/: git.md  lsp.md  notifications.md  python.md  security.md  typescript.md
.github/: CLAUDE.md  CODEOWNERS
.github/workflows/: deploy.yml
.serena/: project.yml
cdk/: CLAUDE.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
cdk/lib/: cdk-stack.ts  lambda-stack.ts
cdk/test/: cdk.test.ts  line-echo-stack.edge-cases.test.ts  line-echo-stack.integration.test.ts  line-echo-stack.snapshot.test.ts  line-echo-stack.test.ts  setup.ts  test-utils.ts
cdk/test/__snapshots__/: line-echo-stack.snapshot.test.ts.snap
docs/: README.md  cicd.md
docs/aws-cdk/: cli_usage.md  core_concepts.md  defining_api_gateway.md  defining_lambda.md  iam_roles.md  index.md
docs/backend-knowledge/: ci_cd.md  cost_optimization.md  databases.md  index.md  monitoring_logging.md  scalability_reliability.md  security.md
docs/line-bot-sdk/: authentication.md  event_types.md  index.md  sending_messages.md  webhooks.md
docs/sambanova-cloud/: api_access.md  chatbot_integration.md  function_calling.md  index.md
docs/xai/: grok_integration.md
lambda/: CLAUDE.md  ai_processor.py  grok_processor.py  interim_response_sender.py  main.py  requirements.txt  response_sender.py  webhook_handler.py
lambda/tests/: test_ai_processor.py  test_response_sender.py  test_webhook_handler.py
scripts/: CLAUDE.md  build-layer.sh
