[project]
name = "echo-line-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "line-bot-sdk>=3.17.1",
    "openai>=1.0.0",
    "boto3>=1.28.0",
    "pytz>=2023.3",
    "xai-sdk>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "lambda/tests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "boto3-stubs[secretsmanager,dynamodb,stepfunctions]>=1.28.0",
    "types-pytz>=2023.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["lambda/layer-dist"]
